--- a/Tech/Shopper/app/src/main/res/values/colors.xml
+++ b/Tech/Shopper/app/src/main/res/values/colors.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimary">#FD6A3B</color>
+    <color name="colorPrimaryDark">#FF5722</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="colorBlack">#000</color>
     <color name="colorWhite">#fff</color>
     <color name="bgBottomNavigation">#fe485a</color>
+    <color name="colorSplashscreenBackground">#FF5722</color>
 </resources>
