--- a/Tech/Shopper/app/src/main/res/layout/fragment_chat_list.xml
+++ b/Tech/Shopper/app/src/main/res/layout/fragment_chat_list.xml
@@ -2,12 +2,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="Fragments.UsersFragment">
+    tools:context="Fragments.ChatListFragment">
 
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/users_RV"
+    <!-- TODO: Update blank fragment layout -->
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:textSize="30sp"
+        android:text="Chat List"/>
 
 </FrameLayout>
