--- a/Tech/Shopper/app/src/main/res/layout/activity_register.xml
+++ b/Tech/Shopper/app/src/main/res/layout/activity_register.xml
@@ -20,10 +20,28 @@
         android:gravity="center_horizontal"
         />
 
+    <!-- TextView: Mall -->
+    <TextView
+        android:id="@+id/register_mall_TV"
+        android:layout_above="@+id/emailTIL"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="xxx Mall"
+        android:textSize="20sp"
+        />
+
+    <View
+        android:layout_below="@+id/register_mall_TV"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"/>
+
+
     <!-- EditText: Email -->
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:id="@+id/emailTIL">
