--- a/Tech/Shopper/app/src/main/res/layout/fragment_home.xml
+++ b/Tech/Shopper/app/src/main/res/layout/fragment_home.xml
@@ -46,7 +46,7 @@
 
 
         <GridLayout
-            android:id="@+id/sm_GL"
+            android:id="@+id/home_GL"
             android:columnCount="2"
             android:rowCount="2"
             android:alignmentMode="alignMargins"
@@ -84,7 +84,7 @@
 
                     <TextView
                         android:layout_marginTop="5dp"
-                        android:text="Collaboration"
+                        android:text="Collaborations"
                         android:textAlignment="center"
                         android:layout_gravity="center_horizontal"
                         android:textColor="@android:color/black"
