--- a/Tech/Shopper/app/src/main/res/layout/activity_setup_profile.xml
+++ b/Tech/Shopper/app/src/main/res/layout/activity_setup_profile.xml
@@ -13,6 +13,7 @@
         android:layout_height="150dp">
 
         <com.blogspot.atifsoftwares.circularimageview.CircularImageView
+            android:id="@+id/setup_profile_image_cv"
             android:layout_marginVertical="10dp"
             android:layout_width="100dp"
             android:layout_height="100dp"
@@ -47,7 +48,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
-            android:text="Store Tags:"
+            android:text="Store Tag:"
             android:textColor="#63000000"
             android:textSize="20sp"/>
 
@@ -58,7 +59,7 @@
             android:layout_height="30dp"
             android:layout_marginLeft="30dp"
             android:textSize="10sp"
-            android:text="Select Tags"
+            android:text="Select Tag"
             />
 
     </RelativeLayout>
@@ -68,7 +69,7 @@
         android:layout_margin="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Selected Tags"
+        android:hint="Selected Tag"
         />
 
     <View
