--- a/Tech/Shopper/app/src/main/res/values/colors.xml
+++ b/Tech/Shopper/app/src/main/res/values/colors.xml
@@ -11,4 +11,9 @@
     <color name="tabIndicatorColor">#FD6A3B</color>
     <color name="colorGrey">#EAEAEA</color>
     <color name="colorBlackAlpha">#37000000</color>
+
+    <color name="colorMainColour">#EE0044</color>
+    <color name="colorMainDarkColour">#CC0044</color>
+
+
 </resources>
