--- a/Tech/Shopper/app/src/main/res/layout/activity_login.xml
+++ b/Tech/Shopper/app/src/main/res/layout/activity_login.xml
@@ -13,6 +13,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/montserrat_bold"
         android:gravity="center_horizontal"
         android:text="Login"
         android:textAlignment="center"
@@ -33,12 +34,12 @@
     <!-- TextView: Mall -->
     <TextView
         android:id="@+id/login_mall_TV"
-        android:layout_above="@+id/login_emailTIL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/login_emailTIL"
+        android:fontFamily="@font/montserrat"
         android:text="xxx Mall"
-        android:textSize="20sp"
-        />
+        android:textSize="20sp" />
 
     <View
         android:layout_below="@+id/login_mall_TV"
@@ -50,18 +51,20 @@
     <!-- EditText: Email -->
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:id="@+id/login_emailTIL">
 
         <EditText
             android:id="@+id/login_emailET"
-            android:inputType="textEmailAddress"
-            android:hint="Email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/textbox_border" />
+            android:background="@drawable/textbox_border"
+            android:hint="Email"
+            android:inputType="textEmailAddress"
+            android:paddingVertical="10dp"
+            android:paddingLeft="10dp" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -69,7 +72,7 @@
     <!-- EditText: Password -->
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="35dp"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:id="@+id/login_passwordTIL"
@@ -80,6 +83,7 @@
             android:id="@+id/login_passwordET"
             android:inputType="textPassword"
             android:hint="Password"
+            android:paddingLeft="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/textbox_border" />
@@ -99,7 +103,7 @@
             android:id="@+id/login_loginbtn"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            style="@style/Button.DarkRed"
+            android:background="@drawable/rounded_button"
             />
         <ImageView
             android:id="@+id/loginImage"
@@ -131,18 +135,18 @@
 
 
     <!-- Text: Recover password -->
+
+    <!-- Text: Go to login page -->
     <TextView
         android:id="@+id/recover_password_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/recover_password"
-        android:gravity="center"
         android:layout_below="@+id/login_RL"
-        android:layout_marginTop="20dp"
-        android:textColor="@color/colorBlack"
-        />
+        android:layout_marginTop="36dp"
+        android:gravity="center"
+        android:text="@string/recover_password"
+        android:textColor="@color/colorBlack" />
 
-    <!-- Text: Go to login page -->
     <TextView
         android:id="@+id/dont_have_account_tv"
         android:layout_width="match_parent"
