--- a/Tech/Shopper/app/src/main/res/layout/activity_main.xml
+++ b/Tech/Shopper/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
             android:id="@+id/register_btn"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            style="@style/Button.LightOrange"
+            android:background="@drawable/rounded_button"
             />
         <ImageView
             android:id="@+id/main_registerImage"
@@ -73,7 +73,7 @@
             android:id="@+id/login_btn"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            style="@style/Button.LightOrange"
+            android:background="@drawable/rounded_button"
             />
         <ImageView
             android:id="@+id/loginImage"
